# ripgrep

./: Cargo.toml  android.sh
crates/cli/: Cargo.toml
crates/globset/: Cargo.toml
crates/grep/: Cargo.toml
crates/ignore/: Cargo.toml
crates/ignore/src/: types.rs
crates/matcher/: Cargo.toml
crates/printer/: Cargo.toml
crates/regex/: Cargo.toml
crates/searcher/: Cargo.toml
