[package]
name = "ignore"
version = "0.4.18"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A fast library for efficiently matching ignore files such as `.gitignore`
against file paths.
"""
documentation = "https://docs.rs/ignore"
homepage = "https://github.com/BurntSushi/ripgrep/tree/master/crates/ignore"
repository = "https://github.com/BurntSushi/ripgrep/tree/master/crates/ignore"
readme = "README.md"
keywords = ["glob", "ignore", "gitignore", "pattern", "file"]
license = "Unlicense OR MIT"
edition = "2018"

[lib]
name = "ignore"
bench = false

[dependencies]
crossbeam-utils = "0.8.12"
globset = { version = "0.4.9", path = "../globset" }
lazy_static = "1.4"
log = "0.4.17"
memchr = "2.5"
regex = "1.7"
same-file = "1.0.6"
thread_local = "1"
walkdir = "2.3.2"

[target.'cfg(windows)'.dependencies.winapi-util]
version = "0.1.5"

[dev-dependencies]
crossbeam-channel = "0.5.6"

[features]
simd-accel = ["globset/simd-accel"]
