[package]
name = "grep-printer"
version = "0.1.6"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
An implementation of the grep crate's Sink trait that provides standard
printing of search results, similar to grep itself.
"""
documentation = "https://docs.rs/grep-printer"
homepage = "https://github.com/BurntSushi/ripgrep/tree/master/crates/printer"
repository = "https://github.com/BurntSushi/ripgrep/tree/master/crates/printer"
readme = "README.md"
keywords = ["grep", "pattern", "print", "printer", "sink"]
license = "Unlicense OR MIT"
edition = "2018"

[features]
default = ["serde1"]
serde1 = ["base64", "serde", "serde_json"]

[dependencies]
base64 = { version = "0.13.1", optional = true }
bstr = "0.2.17"
grep-matcher = { version = "0.1.5", path = "../matcher" }
grep-searcher = { version = "0.1.8", path = "../searcher" }
termcolor = "1.1.3"
serde = { version = "1.0.147", optional = true, features = ["derive"] }
serde_json = { version = "1.0.87", optional = true }

[dev-dependencies]
grep-regex = { version = "0.1.9", path = "../regex" }
